fixing text align

--- a/css/photo-grid.css
+++ b/css/photo-grid.css
@@ -106,6 +106,7 @@
    overflow: hidden;
     padding: 5px;
     word-wrap: break-word;
+    text-align: left;
 }
 .video-grid p{
     text-align: left; 
